# wine_proj

./: .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt  template.html
