[tool.poetry]
name = "wineproj"
version = "0.1.0"
description = ""
authors = ["dvmn-tasks <devman-tasks@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^2.11.2"
xlrd = "^1.2.0"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
